# plane_game

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml  ci.yml
assets/config/: highscores.txt  settings.ini
include/core/: Game.hpp  Input.hpp  ResourceManager.hpp  Settings.hpp
include/game/: Bullet.hpp  Enemy.hpp  Entity.hpp  Explosion.hpp  Player.hpp  PowerUp.hpp  WaveSystem.hpp
include/states/: GameOverState.hpp  GameState.hpp  GameplayState.hpp  HighScoreState.hpp  MainMenuState.hpp  PauseState.hpp  SettingsState.hpp  StateStack.hpp
include/systems/: CollisionSystem.hpp  HighScoreSystem.hpp
include/ui/: Button.hpp  HUD.hpp
src/: main.cpp
src/core/: Game.cpp  Input.cpp  Settings.cpp
src/game/: Bullet.cpp  Enemy.cpp  Explosion.cpp  Player.cpp  PowerUp.cpp  WaveSystem.cpp
src/states/: GameOverState.cpp  GameplayState.cpp  HighScoreState.cpp  MainMenuState.cpp  PauseState.cpp  SettingsState.cpp  StateStack.cpp
src/systems/: HighScoreSystem.cpp
src/ui/: Button.cpp  HUD.cpp
